Just a quick update to ZP6 template to force header z-index to ensure it stays on top when scrolling.

--- a/templates/zpanel6/inc/6.css
+++ b/templates/zpanel6/inc/6.css
@@ -187,6 +187,7 @@ text-align:left;
 	position: fixed;
 	top: 0px;
 	left: 0px;
+	z-index:9999;
 }
 #header_overlay {
 	background: url(../images/bg_top_overlay.png) no-repeat center top;
